testsuite/tests/typecheck/should_fail/T23734.stderr

T23734.hs:7:22: error: [GHC-30337]
    • Type variable ‘a’ is bound by a forall,
        but not used in the family instance.
    • In the type instance declaration for ‘F’

T23734.hs:10:10: error: [GHC-30337]
    • Type variable ‘b’ is bound by a forall,
        but not used in the family instance.
    • In the equations for closed type family ‘G’
      In the type family declaration for ‘G’

T23734.hs:14:15: error: [GHC-30337]
    • Type variable ‘c’ is bound by a forall,
        but not used in the family instance.
    • In the default type instance declaration for ‘H’
      In the class declaration for ‘C’

T23734.hs:17:23: error: [GHC-30337]
    • Type variable ‘d’ is bound by a forall,
        but not used in the family instance.
    • In the data instance declaration for ‘D’
